cucumber-java/testData/inspections/misplacedBackground/test.feature
Feature: Current language
  Scenario: Change current language
    When I am on the root page

  <error descr="Background section must be before scenarios">Background</error>:
    Given signed in user
